# Tartan-Hacks-2026

./: .coderabbit.yaml  .gitignore  .replit  CLAUDE.md  EXPO_GO_TESTING.md  PIGEON_TESTING.md  README.md  RUN_APP.md  app.json  docker-compose.yml  eas.json  nohup.out  package-lock.json  package.json  pyproject.toml  replit.md  run_server.sh  setup.sh
app/: _layout.tsx  advisor-modal.tsx  onboarding-survey.tsx  plaid-link.tsx
app/(tabs)/: _layout.tsx  advisor.tsx  budget.tsx  index.tsx  pigeon-test.tsx  tools.tsx  transactions.tsx
components/: DangerZoneAlert.tsx  FinanceTip.tsx  PigeonTacticalWidget.tsx  PurchaseSimulator.tsx  SubscriptionMonitor.tsx
constants/: colors.ts
hooks/: useCustomerSnapshot.ts
lib/: animations.ts  finance-context.tsx  pigeon-context.tsx  pigeon-service.ts  plaid-service.ts  predictor-service.ts  query-client.ts
pigeon/: ContentView.swift  DangerZone.swift  DemoWalk.gpx  FeedbackView.swift  LocationManager.swift  PersonalizationStore.swift  PredictionService.swift  PurchasePredictor.mlmodel  pigeonApp.swift
purchase_predictor/data/: danger_zones.json  synthetic_training_data.csv  user_transaction_history.csv
purchase_predictor/models/: purchase_predictor.json  purchase_predictor_meta.json
scripts/: seed.ts
server/: index.ts  routes.ts
server_py/: chat.py  database.py  finance.db  main.py  nessie_client.py  predictor_service.py  test_claude.py  test_dedalus.py  test_pigeon.py  test_replacement.py
server_py/mcp_servers/: nessie_server.py  pigeon_server.py
